@@ -11,7 +11,7 @@ DEFAULT_LIB_TYPE=shared
 GCC_VER=4.8.2
 # GCC_VER=4.8.5
 # GCC_EXTRA_VER=4.9.3
-GCC_EXTRA_VER=7.1.0
+GCC_EXTRA_VER=6.4.0
 # BINUTILS_VER=2.24
 BINUTILS_VER=2.27
 
