@@ -13,7 +13,7 @@ DEFAULT_LIB_TYPE=shared
 # GCC_VER=4.1.3
 GCC_VER=4.1.2
 # GCC_EXTRA_VER=4.9.3
-GCC_EXTRA_VER=7.1.0
+GCC_EXTRA_VER=6.4.0
 # BINUTILS_VER=2.18
 BINUTILS_VER=2.27
 
