@@ -5,6 +5,8 @@
 * Use PKG_URL_2 variable for packages: openssl and libpng.
   (These projects often move tarballs into archive.)
 * Package qtbase (optionally) depends on package harfbuzz now.
+* Update in all configs:
+  - GCC_EXTRA_VER from 7.1.0 to 6.4.0
 * Update in all static configs:
   - LIBPNG_VER from 1.2.57 to 1.2.59
   - EXPAT_VER from 2.2.0 to 2.2.5
